# SteamLibraryManager

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  MASTERPLAN_FINAL.md  README.md  README_DE.md  ROADMAP_AUDIT.md  SLM-Fortschritt.md  activate.sh  build-appimage.sh  gemini.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-user.txt  requirements.txt  resize_badge_icons.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-appimage.yml  build-packages.yml  issue-triage.yml  publish-release.yml  test.yml  update-badges.yml
docs/de/: FAQ.md  KEYBOARD_SHORTCUTS.md  TIPS_AND_TRICKS.md  USER_MANUAL.md
docs/en/: FAQ.md  KEYBOARD_SHORTCUTS.md  TIPS_AND_TRICKS.md  USER_MANUAL.md
flatpak/: io.github.switch_bros.SteamLibraryManager.desktop  io.github.switch_bros.SteamLibraryManager.metainfo.xml  io.github.switch_bros.SteamLibraryManager.yml  org.steamlibrarymanager.SteamLibraryManager.yml  python3-dependencies.json
locales/: de.json  en.json
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/: build-deb.sh
packaging/rpm/: build-rpm.sh  steam-library-manager.spec
packaging/tarball/: build-tarball.sh
resources/: .enigma  SteamLibraryManager.desktop  io.github.switch_bros.SteamLibraryManager.metainfo.xml  org.steamlibrarymanager.metainfo.xml
resources/i18n/: emoji.json  logs.json
resources/steamtags/: tags_en.txt  tags_es.txt  tags_ja.txt  tags_pt.txt  tags_zh.txt
scripts/: auto_restore.py  validate_i18n.py
src/: config.py  main.py  version.py
src/core/: appinfo_manager.py  backup_manager.py  cloud_storage_parser.py  database.py  database_importer.py  database_schema.sql  game.py  game_manager.py  local_games_loader.py  localconfig_helper.py  localconfig_parser.py  logging.py  non_game_apps.py  packageinfo_parser.py  profile_manager.py  shortcuts_manager.py  steam_account.py  steam_account_scanner.py  steam_assets.py  steam_auth.py  steam_login_manager.py  token_store.py  vdf_parser.py
src/integrations/: __init__.py  hltb_api.py  protondb_api.py  steam_api_endpoints.py  steam_profile_scraper.py  steam_store.py  steam_web_api.py  steamgrid_api.py
src/services/: __init__.py  asset_service.py  autocat_configs.py  autocat_preset_manager.py  autocategorize_service.py  bootstrap_service.py  category_service.py  curator_client.py  curator_presets.py  enrichment_service.py  external_games_service.py  filter_constants.py  filter_service.py  game_detail_enrichers.py  game_detail_service.py  game_query_service.py  game_service.py  library_health_service.py  library_health_thread.py  metadata_enrichment_service.py  metadata_service.py  search_service.py  update_service.py
src/ui/: auto_categorize_dialog.py  constants.py  game_details_widget.py  image_selection_dialog.py  main_window.py  metadata_dialogs.py  theme.py  (+6 more)
steam_library_manager/: __init__.py  config.py  main.py  version.py
tests/: conftest.py  test_config_library_sync.py  test_smoke.py  test_update_service.py
(+465 files in other folders)
