# pyproject.toml

[project]
name = "steam-library-manager"
version = "1.1.1"
description = "A powerful Steam library organizer for Linux - the modern Depressurizer alternative"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "SwitchBros" }]
keywords = ["steam", "games", "library", "manager", "linux", "pyqt6", "depressurizer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/Switch-Bros/SteamLibraryManager"
Repository = "https://github.com/Switch-Bros/SteamLibraryManager"
Issues = "https://github.com/Switch-Bros/SteamLibraryManager/issues"
Changelog = "https://github.com/Switch-Bros/SteamLibraryManager/blob/master/CHANGELOG.md"

[project.gui-scripts]
steam-library-manager = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.png", "*.svg", "*.webp", "*.desktop", "*.ttf", "*.otf", "*.sql", "*.proto"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    'build/',
    'dist/',
    '\.venv/',
]
# Disable noisy Qt-related checks (Phase 7 cleanup)
disable_error_code = [
    "union-attr",
    "attr-defined",
    "assignment",
    "arg-type",
    "override",
    "var-annotated",
    "method-assign",
    "has-type",
    "return-value",
    "index",
    "misc",
    "import-untyped",
    "annotation-unchecked",
    "truthy-function",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-v --tb=short -ra --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
